--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,24 @@ dependencies:
   fluttertoast: ^8.0.8
   url_launcher: ^6.0.18
 
+  # switch animation between light and dark theme
+  animated_theme_switcher: ^2.0.1-nullsafety.0
+
+  # persist locally data
+  shared_preferences: ^2.0.5
+
+  # pick image
+  image_picker: ^0.7.4
+
+  # store image
+  path_provider: ^2.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^1.0.0
+
 
 flutter_icons:
   android: "launcher_icon"
